# agentloop

./: Gemini.md  LICENSE  README.md  adk-agent-create-skill.md  adk-context.md  adk-docs.md  adk-samples.md  agent-skill-context.md  claude.md  docker-compose.yml  pyproject.toml
.claude/skills/: SKILL.md.back
doc_search_with_reranking_validation/: __init__.py  agent.py  config.py  matching_agent.py  root_agent.py  validation_agent.py  vector_store.py
doc_search_with_reranking_validation/.adk/: session.db
doc_search_with_reranking_validation/tools/: __init__.py  matching_tools.py  validation_tools.py
document_extractor/: .dockerignore  .env.example  Dockerfile  README.md  __init__.py  agentloop.code-workspace  pyproject.toml  requirements.txt  run_extraction.py  run_local_extraction.py  run_resume_extraction.py
document_extractor/.adk/: session.db
document_extractor/archive/: agent.py
document_extractor/document_extractor/: README.md  __init__.py  agent.py  api.py  pyproject.toml
document_extractor/document_extractor copy/: agent.py
document_extractor/document_extractor copy/schemas/: resume_schema.json
document_extractor/document_extractor/.adk/: session.db
document_extractor/document_extractor/schemas/: __init__.py  resume_extraction_schema.json  resume_schema.json
document_extractor/document_extractor/tools/: __init__.py  extraction-schema.md  extractor.py  local_extractor.py  schema-v1.json  test_schema_builder.py
document_extractor/document_extractor_local/: agent.py
document_extractor/document_extractor_local/.adk/: session.db
document_extractor/document_extractor_local/schemas/: __init__.py
document_extractor/document_extractor_local/tools/: __init__.py  local_extractor.py
document_extractor/eval/: eval_dataset.json  test_eval.py
document_extractor/tests/: test_extractor.py  test_local_extractor.py
python/.adk/: session.db
python/agents/doc-ai-agent/: README.md  pyproject.toml
python/agents/doc-ai-agent/doc_ai_agent/: agent.py
python/agents/doc-ai-agent/doc_ai_agent/.adk/: session.db
python/agents/doc-ai-agent/doc_ai_agent/skills/doc-ai-extractor/: SKILL.md
python/agents/doc-ai-agent/doc_ai_agent/skills/doc-ai-extractor/scripts/: extract.py
python/agents/scrum-master/: .env.example  README.md  pyproject.toml
python/agents/scrum-master/scrum_master/: agent.py  tools.py
python/agents/scrum-master/scrum_master/.adk/: session.db
python/agents/scrum-master/scrum_master/sub_agents/: __init__.py  retro_facilitator.py  sprint_planner.py  sprint_reviewer.py  standup_facilitator.py
python/samples/: docling-example.py  sriniresume.md
(+3 files in other folders)
