[project]
name = "document-extractor"
version = "0.1.0"
description = "Dynamic Document Extractor Agent using ADK"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-adk>=1.5.0",
    "google-genai>=1.14.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pytest>=7.0.0"
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.backends._legacy:_Backend"
